@@ -265,6 +265,9 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                                                    'type' => SMOPT_TYPE_STRING,
                                                    'size' => 40,
                                                    'default' => '' ),
+                 '$use_transparent_security_image' => array( 'name' => _("Use transparent security image"),
+                                          'type' => SMOPT_TYPE_BOOLEAN,
+                                          'default' => true ),
                  /* --------------------------------------------------------*/
                  'Group5' => array( 'name' => _("Message of the Day"),
                                     'type' => SMOPT_TYPE_TITLE ),
